log-output/manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: adamfarhadi/dwk-log-output:3.4
          imagePullPolicy: Always
          volumeMounts:
          - name: information-volume
            mountPath: "/etc/information"
            readOnly: true
      volumes:
      - name: information-volume
        configMap:
          name: log-output-cm
          items: 
          - key: information.txt
            path: information.txt
