log-output/manifests/ping-pong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: adamfarhadi/dwk-ping-pong:3.4
          imagePullPolicy: Always
