log-output/manifests/postgres-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres-app
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
      - name: log-output-postgres-db
        image: postgres:18
        ports:
        - containerPort: 5432
          name: web
        volumeMounts:
        - name: postgres-data-storage
          mountPath: /var/lib/postgresql/18/data
        - name: postgres-pingpong-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-pingpong-initdb
          configMap:
            name: postgres-pingpong-initdb-config
  volumeClaimTemplates:
  - metadata:
      name: postgres-data-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: local-path
      resources:
        requests:
          storage: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: postgres-app
